<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNote">


    <AutoCompleteTextView
        android:id="@+id/actv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/std_tv"
        android:layout_margin="@dimen/marginsLarge"
        android:hint="@string/title"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginsLarge"
        android:autofillHints="Hello"
        android:hint="@string/Note"
        android:inputType="text"
        android:maxLines="10"
        app:layout_constraintTop_toBottomOf="@id/actv_title" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_save"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="@dimen/marginsLarge"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_reset"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_margin="@dimen/marginsLarge"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mbtn_save" />


</androidx.constraintlayout.widget.ConstraintLayout>