<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_signIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:hint="@string/email"
            android:padding="@dimen/margins"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:hint="@string/password"
            android:padding="@dimen/margins"
            app:layout_constraintTop_toBottomOf="@id/email_signUp" />

        <Button
            android:id="@+id/account_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="8dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_signUp" />


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_6x"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margins"
                android:text="@string/already_a_member" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margins"
                android:text="@string/login"
                android:textColor="@color/fui_linkColor" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>